tests/baselines/reference/parserVariableDeclaration1.errors.txt
tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts(1,19): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts(2,15): error TS2304: Cannot find name 'b'.
tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts(3,12): error TS2304: Cannot find name 'c'.
tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts(4,14): error TS2304: Cannot find name 'd'.


==== tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts (4 errors) ====
    		var selection = a, 
    		                ~
!!! error TS2304: Cannot find name 'a'.
    			position = b,
    			           ~
!!! error TS2304: Cannot find name 'b'.
    			model = c,
    			        ~
!!! error TS2304: Cannot find name 'c'.
    			support = d;
    			          ~
!!! error TS2304: Cannot find name 'd'.